# computer-system-architecture

./: LICENSE  README.md  correct_input.txt  correct_output.txt  program_output.txt  program_output3.txt  run_tests.sh
task1/: CMakeCache.txt  CMakeLists.txt  Makefile  characters_replacement_encryption.c  characters_replacement_encryption.h  cmake_install.cmake  common.c  common.h  container.c  container.h  encryption.c  encryption.h  main.c  number_encryption.c  number_encryption.h  output.txt  shift_encryption.c  shift_encryption.h  task1
task2/: CMakeCache.txt  CMakeLists.txt  Makefile  characters_replacement_encryption.cpp  characters_replacement_encryption.h  cmake_install.cmake  common.cpp  common.h  container.cpp  container.h  encryption.cpp  encryption.h  input.txt  main.cpp  number_replacement_encryption.cpp  number_replacement_encryption.h  shift_encryption.cpp  shift_encryption.h  task2  wrong.txt
task3/: characters_replacement_encryption.py  common.py  encryption.py  input.txt  main.py  number_encryption.py  output.txt  shift_encryption.py  wrong.txt
task5/: CMakeLists.txt  Makefile  cmake_install.cmake  input.txt  input2.txt  input3.txt  main.cpp  main.py  output.txt  store.cpp  store.h  task5
unified_test_check/: main.py
unified_test_gen/: container_generator.py  correct_input.txt  correct_output.txt  input_generator.py  main.py  output_generator.py
